# agent-chat-cli

./: .cursorrules  .gitignore  CHANGELOG.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  cz.toml  debug_events.sh  pyproject.toml  pytest.ini  test_metadata_simple.py
.github/workflows/: conventional_commits.yml  docker-build-publish.yml  lint.yml  stale.yml  test.yml
agent_chat_cli/: __init__.py  __main__.py  a2a_client.py  chat_interface.py  enhanced_input.py  slim_client.py
changes/: .cursorrules  2025-11-07-bugfix-summary.md  2025-11-07-display-modes.md  2025-11-07-dynamic-form-support.md  2025-11-07-examples.md  2025-11-07-feature-summary.md  2025-11-07-interactive-input.md  2025-11-07-streaming-behavior.md  2025-11-07-streaming-configuration.md  BUGFIX_SUMMARY.md  CHANGELOG_INTERACTIVE.md  DISPLAY_MODES.md  EXAMPLES.md  FEATURE_SUMMARY.md  STREAMING_BEHAVIOR.md  STREAMING_CONFIGURATION.md
docs/: ENHANCED_INPUT_GUIDE.md
examples/: test_dynamic_form.py
tests/: test_a2a_client.py  test_basic.py  test_chat_interface.py  test_dynamic_form.py  test_main.py  test_metadata_processing.py  test_user_input_metadata.py  test_user_input_metadata_failure.py
tests/integration/: README.md  record_session.sh  test_all_events.py  test_cli_final_response.py  test_code_version.py  test_complete_result.py  test_comprehensive_debug.py  test_debug_output.sh  test_duplicate_response.py  test_final_response.py  test_improved_filtering.py  test_markdown_render.py  test_metadata_simple.py  test_partial_result.py  test_run_single_query.py  test_sanitize.py  test_sanitize_partial_result.py  test_streaming_content.py
